katib/katib-controller/overlays/istio/katib-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-db
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
