katib/katib-controller/overlays/istio/katib-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-ui
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
